fixed contact section mobile

--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -143,7 +143,7 @@
 
 .contact-section-main {
   // padding: 5vw 0;
-  padding-top: 10vw;
+  padding: 20vw 0;
   width: 100vw;
   max-width: 100%;
   height: 100vh;
